/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";

message CFE_TIME_SysTime_t_pb
{
	required uint32 Seconds = 1;
	required uint32 Subseconds = 2;
}

message LC_WRTTransition_t_pb
{

	repeated uint32 Padding = 1;
	required CFE_TIME_SysTime_t_pb Timestamp = 2;
	required uint32 DataType = 3;
	required uint32 Value = 4;
}