/* This file was autogenerated from proto template version 0.0.0.1 and autogenerator version 0.0.0.1 */

syntax = "proto2";

message CFE_ES_HkPacket_t_pb
{
	repeated uint32 TlmHeader = 1;
	required CFE_ES_HkPacket_Payload_t_pb Payload = 2;
}


message CFE_ES_HkPacket_Payload_t_pb
{
	repeated uint32 PerfTriggerMask = 1;
	repeated uint32 PerfFilterMask = 2;
	required uint32 ProcessorResets = 3;
	required uint32 SysLogMode = 4;
	required uint32 CFEMinorVersion = 5;
	required uint32 MaxProcessorResets = 6;
	required uint32 ErrCounter = 7;
	required uint32 RegisteredLibs = 8;
	required uint32 CFERevision = 9;
	required uint32 RegisteredExternalApps = 10;
	required uint32 RegisteredCoreApps = 11;
	required uint32 HeapBytesFree = 12;
	required uint32 SysLogSize = 13;
	required uint32 ResetSubtype = 14;
	required uint32 OSALMissionRevision = 15;
	required uint32 PerfDataEnd = 16;
	required uint32 PerfDataStart = 17;
	required uint32 BootSource = 18;
	required uint32 PerfTriggerCount = 19;
	required uint32 PerfState = 20;
	required uint32 HeapMaxBlockSize = 21;
	required uint32 ERLogEntries = 22;
	required uint32 SysLogBytesUsed = 23;
	required uint32 CFEMissionRevision = 24;
	required uint32 RegisteredTasks = 25;
	required uint32 OSALMinorVersion = 26;
	required uint32 CmdCounter = 27;
	required uint32 OSALMajorVersion = 28;
	required uint32 CFECoreChecksum = 29;
	required uint32 ERLogIndex = 30;
	required uint32 PerfDataToWrite = 31;
	required uint32 CFEMajorVersion = 32;
	required uint32 SysLogEntries = 33;
	required uint32 OSALRevision = 34;
	required uint32 HeapBlocksFree = 35;
	required uint32 PerfMode = 36;
	required uint32 ResetType = 37;
	required uint32 PerfDataCount = 38;
}


message CFE_ES_PoolStatsTlm_t_pb
{
	repeated uint32 TlmHeader = 1;
	required CFE_ES_PoolStatsTlm_Payload_t_pb Payload = 2;
}


message CFE_ES_PoolStatsTlm_Payload_t_pb
{
	required uint32 PoolHandle = 1;
	required CFE_ES_MemPoolStats_t_pb PoolStats = 2;
}


message CFE_ES_MemPoolStats_t_pb
{
	required uint32 CheckErrCtr = 1;
	repeated CFE_ES_BlockStats_t_pb BlockStats = 2;
	required uint32 NumFreeBytes = 3;
	required uint32 NumBlocksRequested = 4;
	required uint32 PoolSize = 5;
}


message CFE_ES_BlockStats_t_pb
{
	required uint32 BlockSize = 1;
	required uint32 NumCreated = 2;
	required uint32 NumFree = 3;
}


message CFE_ES_ShellPacket_t_pb
{
	repeated uint32 TlmHeader = 1;
	required char Payload = 2;
}


message char
{
	required string ShellOutput = 1;
}


message CFE_ES_OneAppTlm_t_pb
{
	repeated uint32 TlmHeader = 1;
	required CFE_ES_AppInfo_t Payload = 2;
}


message CFE_ES_AppInfo_t
{
	required CFE_ES_AppInfo_t_pb AppInfo = 1;
}


message CFE_ES_AppInfo_t_pb
{
	required uint32 Type = 1;
	required uint32 ExecutionCounter = 2;
	required string Name = 3;
	required string MainTaskName = 4;
	required uint32 CodeAddress = 5;
	required uint32 CodeSize = 6;
	required string FileName = 7;
	required uint32 Priority = 8;
	required uint32 BSSSize = 9;
	required uint32 DataAddress = 10;
	required uint32 MainTaskId = 11;
	required uint32 BSSAddress = 12;
	required uint32 AppId = 13;
	required uint32 StartAddress = 14;
	required uint32 AddressesAreValid = 15;
	required uint32 StackSize = 16;
	required uint32 DataSize = 17;
	required uint32 NumOfChildTasks = 18;
	required string EntryPoint = 19;
	required uint32 ExceptionAction = 20;
	required uint32 ModuleId = 21;
}

message CFE_ES_TaskData_t_pb
{

	required CFE_ES_ShellPacket_t_pb ShellPacket = 1;
	required uint32 ErrCounter = 2;
	required string CmdPipe = 3;
	required uint32 CmdCounter = 4;
	required uint32 LimitHK = 5;
	required uint32 MsgPtr = 6;
	required uint32 PipeDepth = 7;
	required string PipeName = 8;
	required CFE_ES_PoolStatsTlm_t_pb MemStatsPacket = 9;
	required uint32 LimitCmd = 10;
	required CFE_ES_OneAppTlm_t_pb OneAppPacket = 11;
	required CFE_ES_HkPacket_t_pb HkPacket = 12;
}